--- a/mosru/index.html
+++ b/mosru/index.html
@@ -1,144 +1,238 @@
 <!DOCTYPE html>
 <html class="ua_js_no">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>адаптивная форма под ретину</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="http://wallstone.ru/css-js/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="index.min.css">
-    <link rel="shortcut icon" href="favicon.ico">
-</head>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.6/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="index.min.css" />
+    <link rel="shortcut icon" href="favicon.ico" />
+  </head>
 
-<body class="page page_theme_islands">
-    <div class="modal modal_theme_islands" id="modal-main" role="dialog" tabindex="-1">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <button type="button" class="modal__close close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <form action="" class="form-horizontal clearfix" id="your-data" method="POST" role="form">
-                        <fieldset class="your-data col-sm-6">
-                            <legend class="legend">Ваши данные</legend>
-                            <div class="form-group form-group_required">
-                                <label for="fio" class="label control-label"></label>
-                                <input class="your-data__input form-control required" name="fio" id="fio" placeholder="Введите Ф.И.О.">
-                            </div>
-                            <div class="form-group form-group_required">
-                                <label for="password" class="label">Пароль</label>
-                                <div class="input-group">
-                                    <input class="your-data__input form-control required" name="password" id="password" type="password">
-                                    <span class="input-group-addon">
-                                        <i class="glyphicon glyphicon-eye-close"></i>
-                                    </span>
-                                </div>
-                            </div>
-                            <div class="form-group form-group_required">
-                                <label for="email" class="label">Email</label>
-                                <input class="your-data__input form-control required" name="email" id="email" type="email" value="your@email.com">
-                            </div>
-                            <div class="form-group">
-                                <label class="label"></label>
-                                <select name="city" id="city" class="form-control">
-                                    <option class="option" value="">Город</option>
-                                    <option class="option" value="mos">Москва</option>
-                                    <option class="option" value="ang">Ангарск</option>
-                                    <option class="option" value="gel">Геленджик</option>
-                                </select>
-                            </div>
-                            <div class="form-group">
-                                <label class="label">Телефон</label>
-                                <input class="your-data__input form-control input-mask" name="phone" id="phone" type="tel" data-inputmask="'mask':'(999) 999-9999'">
-                            </div>
-                            <div class="form-group text-center">
-                                <span class="your-data__man" data-sex="man"></span>
-                                <input class="your-data__input-switch" id="input-switch-alt" type="checkbox" checked>
-                                <span class="your-data__woman" data-sex="woman"></span>
-                            </div>
-                        </fieldset>
-                        <fieldset class="important-know col-sm-6">
-                            <legend class="legend">Важно знать</legend>
-                            <div class="important-know__advice">
-                                <div class="important-know__advice-image">
-                                    <img src="images/image@2x.png" class="img-responsive" alt="">
-                                </div>
-                                <ol class="important-know__advice-list">
-                                    <li class="important-know__advice-item">Развивайтесь не смотря ни на что</li>
-                                    <li class="important-know__advice-item">Не повторяйте за тем, кто повторяет</li>
-                                </ol>
-                            </div>
-                            <input type="file" id="photoInput" style="display: none;">
-                            <button type="button" class="important-know__load-photo btn" id="photoInputButton">
-                                <span class="important-know__button-text">ЗАГРУЗИТЬ ФОТО</span>
-                                <div class="important-know__image-border">
-                                    <!-- прозрачный однопиксельный .gif без него Chrome показывает голубую рамку -->
-                                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAAAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" title="загрузить фото" alt="" class="important-know__image img-responsive center-block" id="theImage">
-                                </div>
-                                <div id="errors"></div>
-                            </button>
-                            <!-- <p id="note"></p> -->
-                            <div class="important-know__agreement">
-                                <input type="checkbox" id="agreement" class="important-know__agreement-checkbox">
-                                <label for="agreement" class="important-know__agreement-label">
-                                    Я прочитал и соглашаюсь с
-                                    <a href="#">правилами</a> участия в акции
-                                </label>
-                            </div>
-                            <button type="submit" class="important-know__button btn btn-primary">УЧАСТВОВАТЬ</button>
-                        </fieldset>
-                    </form>
+  <body class="page page_theme_islands">
+    <div
+      class="modal modal_theme_islands"
+      id="modal-main"
+      role="dialog"
+      tabindex="-1"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-body">
+            <button
+              type="button"
+              class="modal__close close"
+              data-dismiss="modal"
+              aria-hidden="true"
+            >
+              &times;
+            </button>
+            <form
+              action=""
+              class="form-horizontal clearfix"
+              id="your-data"
+              method="POST"
+              role="form"
+            >
+              <fieldset class="your-data col-sm-6">
+                <legend class="legend">Ваши данные</legend>
+                <div class="form-group form-group_required">
+                  <label for="fio" class="label control-label"></label>
+                  <input
+                    class="your-data__input form-control required"
+                    name="fio"
+                    id="fio"
+                    placeholder="Введите Ф.И.О."
+                  />
                 </div>
-                <div class="modal-footer">
-                    <a href="#" class="link link_opener">техническое задание</a>
+                <div class="form-group form-group_required">
+                  <label for="password" class="label">Пароль</label>
+                  <div class="input-group">
+                    <input
+                      class="your-data__input form-control required"
+                      name="password"
+                      id="password"
+                      type="password"
+                    />
+                    <span class="input-group-addon">
+                      <i class="glyphicon glyphicon-eye-close"></i>
+                    </span>
+                  </div>
                 </div>
-            </div>
+                <div class="form-group form-group_required">
+                  <label for="email" class="label">Email</label>
+                  <input
+                    class="your-data__input form-control required"
+                    name="email"
+                    id="email"
+                    type="email"
+                    value="your@email.com"
+                  />
+                </div>
+                <div class="form-group">
+                  <label class="label"></label>
+                  <select name="city" id="city" class="form-control">
+                    <option class="option" value="">Город</option>
+                    <option class="option" value="mos">Москва</option>
+                    <option class="option" value="ang">Ангарск</option>
+                    <option class="option" value="gel">Геленджик</option>
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label class="label">Телефон</label>
+                  <input
+                    class="your-data__input form-control input-mask"
+                    name="phone"
+                    id="phone"
+                    type="tel"
+                    data-inputmask="'mask':'(999) 999-9999'"
+                  />
+                </div>
+                <div class="form-group text-center">
+                  <span class="your-data__man" data-sex="man"></span>
+                  <input
+                    class="your-data__input-switch"
+                    id="input-switch-alt"
+                    type="checkbox"
+                    checked
+                  />
+                  <span class="your-data__woman" data-sex="woman"></span>
+                </div>
+              </fieldset>
+              <fieldset class="important-know col-sm-6">
+                <legend class="legend">Важно знать</legend>
+                <div class="important-know__advice">
+                  <div class="important-know__advice-image">
+                    <img
+                      src="images/image@2x.png"
+                      class="img-responsive"
+                      alt=""
+                    />
+                  </div>
+                  <ol class="important-know__advice-list">
+                    <li class="important-know__advice-item">
+                      Развивайтесь не смотря ни на что
+                    </li>
+                    <li class="important-know__advice-item">
+                      Не повторяйте за тем, кто повторяет
+                    </li>
+                  </ol>
+                </div>
+                <input type="file" id="photoInput" style="display: none" />
+                <button
+                  type="button"
+                  class="important-know__load-photo btn"
+                  id="photoInputButton"
+                >
+                  <span class="important-know__button-text"
+                    >ЗАГРУЗИТЬ ФОТО</span
+                  >
+                  <div class="important-know__image-border">
+                    <!-- прозрачный однопиксельный .gif без него Chrome показывает голубую рамку -->
+                    <img
+                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAAAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
+                      title="загрузить фото"
+                      alt=""
+                      class="important-know__image img-responsive center-block"
+                      id="theImage"
+                    />
+                  </div>
+                  <div id="errors"></div>
+                </button>
+                <!-- <p id="note"></p> -->
+                <div class="important-know__agreement">
+                  <input
+                    type="checkbox"
+                    id="agreement"
+                    class="important-know__agreement-checkbox"
+                  />
+                  <label
+                    for="agreement"
+                    class="important-know__agreement-label"
+                  >
+                    Я прочитал и соглашаюсь с
+                    <a href="#">правилами</a> участия в акции
+                  </label>
+                </div>
+                <button
+                  type="submit"
+                  class="important-know__button btn btn-primary"
+                >
+                  УЧАСТВОВАТЬ
+                </button>
+              </fieldset>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <a href="#" class="link link_opener">техническое задание</a>
+          </div>
         </div>
+      </div>
     </div>
     <div class="technical-task">
-        <p class="lead">Тестовое задание:
-            <sup>
-                <a href="https://github.com/weynemeynen/tests/tree/mosru" class="link" target="_blank">
-                    <small>github.com</small>
-                </a>
-            </sup>
-        </p>
-        <ul class="list">
-            <li class="list-item">
-                <p>Сверстать адаптивно форму под ретину.</p>
-                <ul class="list list_level_2">
-                    <li>Десктоп на дизайне.</li>
-                    <li>В мобильном (меньше 428px ширины) форма на весь экран, в одну колонку</li>
-                    <li>остальное на усмотрение исполнителя.</li>
-                </ul>
-            </li>
+      <p class="lead">
+        Тестовое задание:
+        <sup>
+          <a
+            href="https://github.com/weynemeynen/tests/tree/mosru"
+            class="link"
+            target="_blank"
+          >
+            <small>github.com</small>
+          </a>
+        </sup>
+      </p>
+      <ul class="list">
+        <li class="list-item">
+          <p>Сверстать адаптивно форму под ретину.</p>
+          <ul class="list list_level_2">
+            <li>Десктоп на дизайне.</li>
             <li>
-                <p>Функциональность минимум:</p>
-                <ul class="list list_level_2">
-                    <li>несколько городов в аккуратном выпадающем списке</li>
-                    <li>смена пола - два разных radio</li>
-                    <li>загрузка фото - input[type=“file”]</li>
-                    <li>Остальная проработка формы на усмотрение исполнителя.</li>
-                </ul>
+              В мобильном (меньше 428px ширины) форма на весь экран, в одну
+              колонку
             </li>
-            <li>
-                <p>Браузеры: ИЕ9+</p>
-                <ul class="list list_level_2">
-                    <li>современные Safari</li>
-                    <li>Chrome</li>
-                    <li>FireFox</li>
-                </ul>
-            </li>
-        </ul>
-        <p>
-            <a href="images/Desktop@2x.png" target="_blank">исходник</a> и превью дизайна.</p>
-        <button type="button" id="open-form" class="btn btn-primary center-block">ОТКРЫТЬ ФОРМУ</button>
+            <li>остальное на усмотрение исполнителя.</li>
+          </ul>
+        </li>
+        <li>
+          <p>Функциональность минимум:</p>
+          <ul class="list list_level_2">
+            <li>несколько городов в аккуратном выпадающем списке</li>
+            <li>смена пола - два разных radio</li>
+            <li>загрузка фото - input[type=“file”]</li>
+            <li>Остальная проработка формы на усмотрение исполнителя.</li>
+          </ul>
+        </li>
+        <li>
+          <p>Браузеры: ИЕ9+</p>
+          <ul class="list list_level_2">
+            <li>современные Safari</li>
+            <li>Chrome</li>
+            <li>FireFox</li>
+          </ul>
+        </li>
+      </ul>
+      <p>
+        <a href="images/Desktop@2x.png" target="_blank">исходник</a> и превью
+        дизайна.
+      </p>
+      <button type="button" id="open-form" class="btn btn-primary center-block">
+        ОТКРЫТЬ ФОРМУ
+      </button>
     </div>
-    <script src="http://wallstone.ru/css-js/assets/js/jquery.min.js"></script>
-    <script src="http://wallstone.ru/css-js/assets/js/bootstrap.min.js"></script>
-    <script src="http://wallstone.ru/css-js/assets/js/inputmask.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/inputmask/4.0.9/jquery.inputmask.bundle.min.js"></script>
+    <!-- <script src="inputmask.js"></script> -->
     <script src="index.min.js"></script>
-</body>
-
+  </body>
 </html>
