--- a/desire/index.html
+++ b/desire/index.html
@@ -1,176 +1,244 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Степановна</title>
-	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
-	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/bootstrap-datetimepicker.css">
-	<!--<link rel="stylesheet" href="css/_bootstrap.css"/>-->
-	<link rel="stylesheet" href="css/_bootstrap.css"/>
-	<!-- <link rel="stylesheet/less" href="less/_bootstrap.less"> --><!--<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.5.0/less.min.js"></script>-->
-	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries --><!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
-	<link rel="stylesheet" href="css/ie.css"/>
-	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-	<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script><![endif]-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
-	<script src="js/popup-control.js"></script>
-	<script src="js/jquery-css-transform.js"></script>
-	<script src="js/rotate3Di.js"></script>
-	<script src="node_modules/moment/moment.js"></script>
-	<script src="js/bootstrap-datetimepicker.js"></script>
-</head>
-<body>
-<div class="bg-layer bg-layer_size_in bg-vertical_color_orange"></div>
-<header>
-	<div class="container">
-		<div class="row">
-			<div class="col-xs-3 text-right">
-				<a href="http://xn--80aafk5bbffqk.xn--p1ai/" class="logo">
-					<img src="images/logo.png" class="img-responsive" alt="Степановна"/></a>
-			</div>
-			<div class="col-xs-9">
-				<div class="social">
-					<a href="https://vk.com/club87894296" target="_blank"><img src="images/ico-vk.png"></a>
-				</div>
-				<nav class="navbar navbar-default" role="navigation">
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav__menu">
-							<span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
-						</button>
-					</div>
-					<div class="navbar-collapse collapse" id="nav__menu">
-						<ul class="nav navbar-nav">
-							<li class="active"><a href="index.html">Главная</a></li>
-							<!--<li><a href="prizes.html">Призы</a></li>-->
-							<li><a href="winners.html">Победители</a></li>
-							<li><a href="rules.html">Правила</a></li>
-							<li><a href="ask-question.html">Вопрос-ответ</a></li>
-							<li><a href="index.html">Войти</a></li>
-							<li><a href="index.html" class="login">Андрей <span class="icon-arrow-login"></span></a></li>
-						</ul>
-					</div>
-				</nav>
-			</div>
-		</div>
-	</div>
-</header>
-<section class="header">
-	<div class="text-center">
-		<div class="flipper-top flipper_size_big flipper-top_index">
-			<div class="flipper-top__front">
-				<span>Акция «нащелкай на мечту!»</span>
-			</div>
-		</div>
-	</div>
-</section>
-<section class="sequencing">
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-2 col-sm-offset-1">
-				<h3>Купите
-					<small>акционную пачку “Степановна”</small>
-					<span class="icon-arrow-right visible-lg"></span>
-				</h3>
-			</div>
-			<div class="col-sm-3">
-				<h3>Зарегистрируйте<br>
-					<small>уникальный код</small>
-					<span class="icon-arrow-right visible-lg"></span>
-				</h3>
-			</div>
-			<div class="col-sm-2">
-				<h3>Получите
-					<small>возможность выиграть один из ценных призов!</small>
-				</h3>
-			</div>
-			<div class="col-sm-4">
-				<form class="form-inline" role="form">
-					<label class="sr-only" for="code">введите код</label> <input class="form-control" id="code" placeholder="введите код">
-					<button type="button" class="btn btn-link" data-toggle="modal" data-target="#popup" data-popup-url="htmls/password-recovery.html">
-						<strong>Отправить!</strong>
-					</button>
-				</form>
-			</div>
-		</div>
-	</div>
-</section>
-<div class="prizes">
-	<div class="container text-center">
-		<div class="row">
-			<div class="col-sm-3 col-sm-offset-1">
-				<div class="prizes__item">
-					<img src="images/prize1.png" class="img-responsive" alt="">
-					<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-						<div class="flipper flipper_size_small flipper_size_small_1">
-							<div class="front">
-								<span>90 призов</span>
-							</div>
-							<div class="back">
-								<span>20 000 руб.<span>на покупку<br>планшета</span></span>
-							</div>
-						</div>
-						<div class="bg-layer bg-layer_size_out bg-radial_color_white"></div>
-					</div>
-				</div>
-			</div>
-			<div class="col-sm-5">
-				<div class="prizes__item prizes__auto">
-					<img src="images/prize2.png" class="img-responsive" alt="">
-					<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-						<div class="flipper flipper_size_small flipper_size_small_2">
-							<div class="front">
-								<span>Главный<br>приз</span>
-							</div>
-							<div class="back">
-								<span>600 000 руб.<span>на покупку<br>автомобиля</span></span>
-							</div>
-						</div>
-						<div class="bg-layer bg-layer_size_out bg-radial_color_yellow"></div>
-					</div>
-				</div>
-			</div>
-			<div class="col-sm-3 col-sm-pull-1">
-				<div class="prizes__item prize__tel">
-					<img src="images/prize3.png" class="img-responsive" alt="">
-					<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-						<div class="flipper flipper_size_small flipper_size_small_3">
-							<div class="front">
-								<span>100 призов<br>каждый день</span>
-							</div>
-							<div class="back">
-								<span>100 руб. <span>на телефон</span></span>
-							</div>
-						</div>
-						<div class="bg-layer bg-layer_size_out bg-radial_color_yellow"></div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-<!--popup-->
-<div id="popup" class="modal fade popup popup-root" role="dialog" aria-hidden="true">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h2 id="modal-title" class="text-center"></h2>
-			</div>
-			<div class="modal-body center-block" id="popup-content"></div>
-			<div style="display: none; position: relative; top: -32px;" id="yesNoPopupWrapper">
-				<div id="yesNoPopup">
-					<div class="modal-footer">
-						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-						<button type="button" class="btn btn-primary">Save changes</button>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Степановна</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="css/bootstrap-datetimepicker.css" />
+    <!--<link rel="stylesheet" href="css/bootstrap.css"/>-->
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <!-- <link rel="stylesheet/less" href="less/_bootstrap.less"> -->
+    <!--<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.5.0/less.min.js"></script>-->
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <link rel="stylesheet" href="css/ie.css" />
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script
+    ><![endif]-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script src="js/popup-control.js"></script>
+    <script src="js/jquery-css-transform.js"></script>
+    <script src="js/rotate3Di.js"></script>
+    <script src="js/moment.js"></script>
+    <script src="js/bootstrap-datetimepicker.js"></script>
+  </head>
+  <body>
+    <div class="bg-layer bg-layer_size_in bg-vertical_color_orange"></div>
+    <header>
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-3 text-right">
+            <a href="http://xn--80aafk5bbffqk.xn--p1ai/" class="logo">
+              <img
+                src="images/logo.png"
+                class="img-responsive"
+                alt="Степановна"
+            /></a>
+          </div>
+          <div class="col-xs-9">
+            <div class="social">
+              <a href="https://vk.com/club87894296" target="_blank"
+                ><img src="images/ico-vk.png"
+              /></a>
+            </div>
+            <nav class="navbar navbar-default" role="navigation">
+              <div class="navbar-header">
+                <button
+                  type="button"
+                  class="navbar-toggle"
+                  data-toggle="collapse"
+                  data-target="#nav__menu"
+                >
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span> <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+              </div>
+              <div class="navbar-collapse collapse" id="nav__menu">
+                <ul class="nav navbar-nav">
+                  <li class="active"><a href="index.html">Главная</a></li>
+                  <!--<li><a href="prizes.html">Призы</a></li>-->
+                  <li><a href="winners.html">Победители</a></li>
+                  <li><a href="rules.html">Правила</a></li>
+                  <li><a href="ask-question.html">Вопрос-ответ</a></li>
+                  <li><a href="index.html">Войти</a></li>
+                  <li>
+                    <a href="index.html" class="login"
+                      >Андрей <span class="icon-arrow-login"></span
+                    ></a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </header>
+    <section class="header">
+      <div class="text-center">
+        <div class="flipper-top flipper_size_big flipper-top_index">
+          <div class="flipper-top__front">
+            <span>Акция «нащелкай на мечту!»</span>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="sequencing">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-2 col-sm-offset-1">
+            <h3>
+              Купите
+              <small>акционную пачку “Степановна”</small>
+              <span class="icon-arrow-right visible-lg"></span>
+            </h3>
+          </div>
+          <div class="col-sm-3">
+            <h3>
+              Зарегистрируйте<br />
+              <small>уникальный код</small>
+              <span class="icon-arrow-right visible-lg"></span>
+            </h3>
+          </div>
+          <div class="col-sm-2">
+            <h3>
+              Получите
+              <small>возможность выиграть один из ценных призов!</small>
+            </h3>
+          </div>
+          <div class="col-sm-4">
+            <form class="form-inline" role="form">
+              <label class="sr-only" for="code">введите код</label>
+              <input class="form-control" id="code" placeholder="введите код" />
+              <button
+                type="button"
+                class="btn btn-link"
+                data-toggle="modal"
+                data-target="#popup"
+                data-popup-url="htmls/password-recovery.html"
+              >
+                <strong>Отправить!</strong>
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="prizes">
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-sm-3 col-sm-offset-1">
+            <div class="prizes__item">
+              <img src="images/prize1.png" class="img-responsive" alt="" />
+              <div
+                class="flip-container"
+                ontouchstart="this.classList.toggle('hover');"
+              >
+                <div class="flipper flipper_size_small flipper_size_small_1">
+                  <div class="front">
+                    <span>90 призов</span>
+                  </div>
+                  <div class="back">
+                    <span
+                      >20 000 руб.<span>на покупку<br />планшета</span></span
+                    >
+                  </div>
+                </div>
+                <div
+                  class="bg-layer bg-layer_size_out bg-radial_color_white"
+                ></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-5">
+            <div class="prizes__item prizes__auto">
+              <img src="images/prize2.png" class="img-responsive" alt="" />
+              <div
+                class="flip-container"
+                ontouchstart="this.classList.toggle('hover');"
+              >
+                <div class="flipper flipper_size_small flipper_size_small_2">
+                  <div class="front">
+                    <span>Главный<br />приз</span>
+                  </div>
+                  <div class="back">
+                    <span
+                      >600 000 руб.<span>на покупку<br />автомобиля</span></span
+                    >
+                  </div>
+                </div>
+                <div
+                  class="bg-layer bg-layer_size_out bg-radial_color_yellow"
+                ></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3 col-sm-pull-1">
+            <div class="prizes__item prize__tel">
+              <img src="images/prize3.png" class="img-responsive" alt="" />
+              <div
+                class="flip-container"
+                ontouchstart="this.classList.toggle('hover');"
+              >
+                <div class="flipper flipper_size_small flipper_size_small_3">
+                  <div class="front">
+                    <span>100 призов<br />каждый день</span>
+                  </div>
+                  <div class="back">
+                    <span>100 руб. <span>на телефон</span></span>
+                  </div>
+                </div>
+                <div
+                  class="bg-layer bg-layer_size_out bg-radial_color_yellow"
+                ></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--popup-->
+    <div
+      id="popup"
+      class="modal fade popup popup-root"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h2 id="modal-title" class="text-center"></h2>
+          </div>
+          <div class="modal-body center-block" id="popup-content"></div>
+          <div
+            style="display: none; position: relative; top: -32px"
+            id="yesNoPopupWrapper"
+          >
+            <div id="yesNoPopup">
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-default"
+                  data-dismiss="modal"
+                >
+                  Close
+                </button>
+                <button type="button" class="btn btn-primary">
+                  Save changes
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
