--- a/desire/load.html
+++ b/desire/load.html
@@ -1,169 +1,204 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Загрузка файлов</title>
-	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
-	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/_bootstrap.css">
-	<link rel="stylesheet" href="css/jquery.mCustomScrollbar.css">
-	<!-- <link rel="stylesheet/less" href="less/_bootstrap.less"> -->
-	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.5.0/less.min.js"></script>
-	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
-	<link rel="stylesheet" href="css/ie.css"/>
-	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-	<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>  <![endif]-->
-</head>
-<body>
-<div class="bg-layer bg-layer_size_in bg-layer_color_orange"></div>
-<header>
-	<div class="container">
-		<div class="row">
-			<div class="col-xs-3 text-right">
-				<a href="http://xn--80aafk5bbffqk.xn--p1ai/" class="logo"> <img src="images/logo.png" class="img-responsive" alt="Степановна"></a>
-			</div>
-			<div class="col-xs-9">
-				<div class="social">
-					<a href="https://vk.com/club87894296" target="_blank"><img src="images/ico-vk.png"></a>
-				</div>
-				<nav class="navbar navbar-default" role="navigation">
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav__menu">
-							<span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
-						</button>
-						<!--<a class="navbar-brand" href="#">Brand</a>-->
-					</div>
-					<div class="navbar-collapse collapse" id="nav__menu">
-						<ul class="nav navbar-nav">
-							<li><a href="index.html">Главная</a></li>
-							<!--<li><a href="prizes.html">Призы</a></li>-->
-							<li><a href="winners.html">Победители</a></li>
-							<li><a href="rules.html">Правила</a></li>
-							<li><a href="ask-question.html">Вопрос-ответ</a></li>
-							<li><a href="index.html">Войти</a></li>
-							<li><a href="index.html" class="login">Андрей <span class="icon-arrow-login"></span></a></li>
-						</ul>
-					</div>
-				</nav>
-			</div>
-		</div>
-	</div>
-</header>
-<section class="load">
-	<div class="container load__container">
-		<div class="passport striped">
-			<div class="row">
-				<h2 class="col-sm-12">Паспортные данные</h2>
-			</div>
-			<div class="row">
-				<div class="col-sm-6">Первая страница паспорта</div>
-				<div class="col-sm-6">
-					<label class="file_upload">
-						<mark>Загрузить файл</mark>
-						<input type="file">
-					</label>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-6">Страница паспорта с указанием адреса регистрацией</div>
-				<div class="col-sm-6">
-					<label class="file_upload">
-						<mark>Загрузить файл</mark>
-						<input type="file">
-					</label>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-6">ИНН</div>
-				<div class="col-sm-6">
-					<label class="file_upload">
-						<mark>Загрузить файл</mark>
-						<input type="file">
-					</label>
-				</div>
-			</div>
-		</div>
-		<div class="requisites striped">
-			<div class="row">
-				<h2 class="col-sm-12">Реквизиты банка</h2>
-			</div>
-			<div class="row">
-				<div class="col-sm-6">Банк получателя</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-6">Номер банка и город отделения</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-6">БИК</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-6">ИНН</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-6">К/Р Банка</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-6">Р/С Банка</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-6">Р/С Получателя</div>
-				<div class="col-sm-6">
-					<label class="file_upload">
-						<mark>Загрузить файл</mark>
-						<input type="file">
-					</label></div>
-			</div>
-		</div>
-		<div class="load__note text-center">Пожалуйста внимательно проверяйте данные перед отправкой. ФИО владельца счета, который Вы укажете в реквизитах банка, должны
-			совпадать с
-			Вашими ФИО, указанными при регистрации на сайте. Просьба высылать данные с защищенных источников
-		</div>
-	</div>
-	<div class="text-center">
-		<button class="btn btn-default"><span>Отправить данные</span></button>
-	</div>
-</section>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="js/popup-control.js"></script>
-<script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-<script>
-	$(function() {
-		var wrapper = $(".file_upload"),
-			inp = wrapper.find("input"),
-			btn = wrapper.find(".button"),
-			lbl = wrapper.find("mark");
-		// Crutches for the :focus style:
-		inp.focus(function() {
-			wrapper.addClass("focus");
-		}).blur(function() {
-			wrapper.removeClass("focus");
-		});
-		var file_api = ( window.File && window.FileReader && window.FileList && window.Blob ) ? true : false;
-		inp.change(function() {
-			var file_name;
-			if (file_api && inp[0].files[0]) {
-				file_name = inp[0].files[0].name;
-			} else {
-				file_name = inp.val().replace("C:\\fakepath\\", '');
-			}
-			if (!file_name.length) {
-				return;
-			}
-			if (lbl.is(":visible")) {
-				lbl.text(file_name);
-				btn.text("Выбрать");
-			} else {
-				btn.text(file_name);
-			}
-		}).change();
-	});
-	$(window).resize(function() {
-		$(".file_upload input").triggerHandler("change");
-	});
-</script>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Загрузка файлов</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/jquery.mCustomScrollbar.css" />
+    <!-- <link rel="stylesheet/less" href="less/_bootstrap.less"> -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.5.0/less.min.js"></script>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <link rel="stylesheet" href="css/ie.css" />
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="bg-layer bg-layer_size_in bg-layer_color_orange"></div>
+    <header>
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-3 text-right">
+            <a href="http://xn--80aafk5bbffqk.xn--p1ai/" class="logo">
+              <img
+                src="images/logo.png"
+                class="img-responsive"
+                alt="Степановна"
+            /></a>
+          </div>
+          <div class="col-xs-9">
+            <div class="social">
+              <a href="https://vk.com/club87894296" target="_blank"
+                ><img src="images/ico-vk.png"
+              /></a>
+            </div>
+            <nav class="navbar navbar-default" role="navigation">
+              <div class="navbar-header">
+                <button
+                  type="button"
+                  class="navbar-toggle"
+                  data-toggle="collapse"
+                  data-target="#nav__menu"
+                >
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span> <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <!--<a class="navbar-brand" href="#">Brand</a>-->
+              </div>
+              <div class="navbar-collapse collapse" id="nav__menu">
+                <ul class="nav navbar-nav">
+                  <li><a href="index.html">Главная</a></li>
+                  <!--<li><a href="prizes.html">Призы</a></li>-->
+                  <li><a href="winners.html">Победители</a></li>
+                  <li><a href="rules.html">Правила</a></li>
+                  <li><a href="ask-question.html">Вопрос-ответ</a></li>
+                  <li><a href="index.html">Войти</a></li>
+                  <li>
+                    <a href="index.html" class="login"
+                      >Андрей <span class="icon-arrow-login"></span
+                    ></a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </header>
+    <section class="load">
+      <div class="container load__container">
+        <div class="passport striped">
+          <div class="row">
+            <h2 class="col-sm-12">Паспортные данные</h2>
+          </div>
+          <div class="row">
+            <div class="col-sm-6">Первая страница паспорта</div>
+            <div class="col-sm-6">
+              <label class="file_upload">
+                <mark>Загрузить файл</mark>
+                <input type="file" />
+              </label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-6">
+              Страница паспорта с указанием адреса регистрацией
+            </div>
+            <div class="col-sm-6">
+              <label class="file_upload">
+                <mark>Загрузить файл</mark>
+                <input type="file" />
+              </label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-6">ИНН</div>
+            <div class="col-sm-6">
+              <label class="file_upload">
+                <mark>Загрузить файл</mark>
+                <input type="file" />
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="requisites striped">
+          <div class="row">
+            <h2 class="col-sm-12">Реквизиты банка</h2>
+          </div>
+          <div class="row">
+            <div class="col-sm-6">Банк получателя</div>
+          </div>
+          <div class="row">
+            <div class="col-sm-6">Номер банка и город отделения</div>
+          </div>
+          <div class="row">
+            <div class="col-sm-6">БИК</div>
+          </div>
+          <div class="row">
+            <div class="col-sm-6">ИНН</div>
+          </div>
+          <div class="row">
+            <div class="col-sm-6">К/Р Банка</div>
+          </div>
+          <div class="row">
+            <div class="col-sm-6">Р/С Банка</div>
+          </div>
+          <div class="row">
+            <div class="col-sm-6">Р/С Получателя</div>
+            <div class="col-sm-6">
+              <label class="file_upload">
+                <mark>Загрузить файл</mark>
+                <input type="file" />
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="load__note text-center">
+          Пожалуйста внимательно проверяйте данные перед отправкой. ФИО
+          владельца счета, который Вы укажете в реквизитах банка, должны
+          совпадать с Вашими ФИО, указанными при регистрации на сайте. Просьба
+          высылать данные с защищенных источников
+        </div>
+      </div>
+      <div class="text-center">
+        <button class="btn btn-default"><span>Отправить данные</span></button>
+      </div>
+    </section>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/popup-control.js"></script>
+    <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script>
+      $(function () {
+        var wrapper = $('.file_upload'),
+          inp = wrapper.find('input'),
+          btn = wrapper.find('.button'),
+          lbl = wrapper.find('mark')
+        // Crutches for the :focus style:
+        inp
+          .focus(function () {
+            wrapper.addClass('focus')
+          })
+          .blur(function () {
+            wrapper.removeClass('focus')
+          })
+        var file_api =
+          window.File && window.FileReader && window.FileList && window.Blob
+            ? true
+            : false
+        inp
+          .change(function () {
+            var file_name
+            if (file_api && inp[0].files[0]) {
+              file_name = inp[0].files[0].name
+            } else {
+              file_name = inp.val().replace('C:\\fakepath\\', '')
+            }
+            if (!file_name.length) {
+              return
+            }
+            if (lbl.is(':visible')) {
+              lbl.text(file_name)
+              btn.text('Выбрать')
+            } else {
+              btn.text(file_name)
+            }
+          })
+          .change()
+      })
+      $(window).resize(function () {
+        $('.file_upload input').triggerHandler('change')
+      })
+    </script>
+  </body>
 </html>
