--- a/desire/stub.html
+++ b/desire/stub.html
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Степановна</title>
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
-	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"/>
 	<link rel="stylesheet" href="css/bootstrap-datetimepicker.css">
-	<link rel="stylesheet" href="css/_bootstrap.css"/>
+	<link rel="stylesheet" href="css/bootstrap.css"/>
 	<!-- <link rel="stylesheet/less" href="less/_bootstrap.less"> --><!--<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.5.0/less.min.js"></script>-->
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries --><!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
@@ -16,11 +16,11 @@
 	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script><![endif]-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<script src="js/popup-control.js"></script>
 	<script src="js/jquery-css-transform.js"></script>
 	<script src="js/rotate3Di.js"></script>
-	<script src="node_modules/moment/moment.js"></script>
+	<script src="js/moment.js"></script>
 	<script src="js/bootstrap-datetimepicker.js"></script>
 </head>
 <body>
