--- a/anketa/index.html
+++ b/anketa/index.html
@@ -23,7 +23,7 @@
     />
     <link rel="stylesheet" href="assets/styles/jquery-ui.min.css" />
     <link rel="stylesheet" href="assets/styles/helpers.css" />
-    <link rel="stylesheet" href="assets/styles/_index.css" />
+    <link rel="stylesheet" href="assets/styles/index.css" />
     <link rel="shortcut icon" href="favicon.ico" />
   </head>
 
@@ -500,6 +500,6 @@
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script src="assets/scripts/slider.js"></script>
     <script src="assets/scripts/modulargrid.js"></script>
-    <script src="assets/scripts/_index.js"></script>
+    <script src="assets/scripts/index.js"></script>
   </body>
 </html>
