--- a/yandex-test/index.html
+++ b/yandex-test/index.html
@@ -3,7 +3,7 @@
   <head>
     <!--<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8">-->
     <title>Тестовое задание для верстальщика</title>
-    <link rel="stylesheet" href="_style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css"
@@ -12,14 +12,10 @@
       type="text/javascript"
       src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"
     ></script>
-    <script type="text/javascript">
-      window.jQuery ||
-        document.write('<script src="../assets/js/jquery.min.js"><\/script>')
-    </script>
     <script src="https://code.jquery.com/ui/1.9.1/jquery-ui.js"></script>
     <script src="js/jquery.rating-2.0.js"></script>
     <script src="js/script.js"></script>
-    <!--[if IE]> <link rel="stylesheet" href="_ie.css" /><![endif]-->
+    <!--[if IE]> <link rel="stylesheet" href="ie.css" /><![endif]-->
   </head>
 
   <body>
