--- a/calculator/index.html
+++ b/calculator/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="container text-center">
       <div class="row">
-        <div class="col-md-4 mx-auto">
+        <div class="col-sm-8 col-md-6 col-lg-5 col-xl-4 mx-auto">
           <table
             class="table table_border_collapse table-layout_fixed"
             id="calculator"
