--- a/mdi/_index.html
+++ b/mdi/_index.html
@@ -8,10 +8,9 @@
 	<!--[if gte IE 7]>
 	<link rel="stylesheet" href="_index.ie.css"/>  <![endif]-->
 	<meta name="description" content="">
-	<link rel="shortcut icon" href="/favicon.ico">
-	<link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
-	<script src="//code.jquery.com/jquery-1.9.1.js"></script>
-	<script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.min.css">
+	<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+	<script src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
 </head>
 <body class="page page__body">
 <div class="table-outer">
@@ -394,7 +393,6 @@
 </table>
 </div>
 </div>
-<script src="_index.js"></script>
-<!--<script src="modulargrid.js"></script>-->
+<script src="index.js"></script>
 </body>
 </html>
