--- a/mdi/index.html
+++ b/mdi/index.html
@@ -234,12 +234,8 @@
         </table>
       </div>
     </div>
-    <div id="sourse">
-      <h3>макет</h3>
-      <img src="diz.jpg" width="70%" />
-    </div>
 
     <script src="jquery.treetable.js"></script>
-    <script src="_index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
